Fix shift-width function and shift mixin.

--- a/_sass/mcgriddle/functions/_shift-width.scss
+++ b/_sass/mcgriddle/functions/_shift-width.scss
@@ -1,7 +1,7 @@
 // ==================================================
 // Shift Width
 // ==================================================
-@mixin shift($_columns: 1, $_percent: true) {
+@function shift-width($_columns: 1, $_percent: true) {
   $_shift: column-width($_columns, $_percent) + gutter-width($_percent);
 
   @return $_shift;
